chore: update package json npm scripts for pipeline

--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "analyze": "ANALYZE=true npm run build && source-map-explorer 'build/assets/*.js' --no-border-checks",
-    "i18n:extract": "lingui extract --clean",
+    "translations:extract": "lingui extract --clean",
+    "translations:validate": "npm run translations:extract && lingui compile --strict --typescript",
     "uikit:preview": "storybook dev -p 6006",
     "uikit:build": "storybook build",
     "design-system:sync": "npm-run-all -s design-system:tokenize design-system:codegen design-system:format",
