--- a/playwright/package.json
+++ b/playwright/package.json
@@ -6,8 +6,8 @@
     "pretty-quick": "pretty-quick",
     "lint": "tsc --noEmit && eslint 'tests/**/*.ts'",
     "lint-fix": "eslint 'tests/**/*.{ts,tsx}' --fix",
-    "format:check": "prettier --check './src/**/*.{ts,tsx}'",
-    "format:write": "prettier --write './src/**/*.{ts,tsx}'",
+    "format:check": "prettier --check './tests/**/*.{ts,tsx}'",
+    "format:write": "prettier --write './tests/**/*.{ts,tsx}'",
     "typecheck": "tsc --noEmit",
     "playwright:test": "playwright test",
     "playwright:debug": "playwright test --debug",
@@ -19,9 +19,11 @@
     "eslint": "8.56.0",
     "eslint-plugin-playwright": "1.3.0",
     "typescript": "5.4.2",
-    "typescript-eslint": "7.2.0"
+    "typescript-eslint": "7.2.0",
+    "prettier": "3.6.2"
   },
   "prettier": {
+    "printWidth": 80,
     "bracketSpacing": true,
     "trailingComma": "es5",
     "tabWidth": 2,
