--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -62,7 +62,7 @@ full-stack:
 
     # TODO: master and replica
     redis:
-      image: bitnami/redis:6.0
+      image: bitnamilegacy/redis:6.0 # TODO: use some other non-root image: https://github.com/bitnami/charts/issues/35164
       replicas: 1
       port: 6379
       livenessCommand:
