--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -17,7 +17,6 @@ global:
 
 full-stack:
   networkPolicyEnabled: true
-  networkPolicyProvider: ${kubernetes_network_policy_provider}
 
   ingress:
     class: nginx
@@ -26,6 +25,9 @@ full-stack:
       - name: ${taito_domain}
         altDomains:
           - name: ${taito_altdomain}
+    annotations:
+      nginx.ingress.kubernetes.io/configuration-snippet: |
+        proxy_set_header "X-Request-id $request_id";
 
   serviceDefaults:
     # Auth and security
@@ -90,7 +92,8 @@ full-stack:
       egress:
         - ip: "${db_database_real_host}/32"
         - fullname: ${taito_project}-${taito_target_env}-redis
-        - fullname: ${taito_project}-${taito_target_env}-storage
+        - fullname: ${taito_project}-${taito_target_env}-storage # TODO: only for s3 proxy
+        - domain: storage.googleapis.com # For GCP
       db: # For old gcp environments
         useProxy: ${gcp_db_proxy_enabled} # For old gcp environments
         instance: ${taito_zone}:${taito_provider_region}:${db_database_instance} # For old gcp environments
