--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -1,14 +1,16 @@
-ARG BUILDER_IMAGE='node:20.9.0-alpine'
+ARG BUILDER_IMAGE='node:22.12.0-bookworm-slim'
 
 # Builder, tester and runtime container for local development
 # NOTE: npm libraries are installed inside container to speed up build
 FROM ${BUILDER_IMAGE}
 
+# Install deps
+RUN apt-get update -y && apt-get install -y libxml2-utils
+
 # Init /develop for user USER_UID
 ARG USER_UID=1001
-RUN adduser -u "${USER_UID}" -G root -S developer || : 
-RUN mkdir -p /develop && \
-     chown "${USER_UID}:0" /develop
+RUN useradd --system --uid "${USER_UID}" --gid 0 -m developer || :
+RUN mkdir -p /develop && chown "${USER_UID}:0" /develop
 WORKDIR /develop
 USER "${USER_UID}"
 
@@ -20,7 +22,7 @@ COPY --chown="${USER_UID}:0" \
      /develop/
 
 ENV NODE_ENV development
-RUN npm install --loglevel warn
+RUN npm install --no-audit --loglevel warn
 
 EXPOSE 8080
-CMD npm install; npm run start
+CMD npm install --no-audit; npm run start
