--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,31 +1,12 @@
 # Builder, tester and runtime container for local development
-
-# ******************************** NOTE ***************************************
-# Enable cypress and the browsers you want test against when you are ready
-# to do e2e testing. Otherwise keep the ARGs commented out so that the browsers
-# are not installed unnecessarily.
-
-# Also keep in mind that the browser versions need to be exact versions!
-# Check available versions here: https://github.com/cypress-io/cypress-docker-images/tree/master/factory#api
-# ARG CHROME_VERSION='114.0.5735.198-1'
-# ARG EDGE_VERSION='100.0.1185.29-1'
-# ARG FIREFOX_VERSION='107.0'
-# *****************************************************************************
-
-# Node v22.19.0 has npm v10.9.3 (should match the version in package.json `engines` field!)
-ARG NODE_VERSION='22.19.0'
-# BASE_IMAGE arg is used by the 'cypress/factory' image
-ARG BASE_IMAGE='node:22.19.0'
-# Change BUILDER_IMAGE from 'node:x' to 'cypress/factory' when you are ready to do e2e testing
-ARG BUILDER_IMAGE='node:22.19.0'
+ARG BUILDER_IMAGE='node:22.12.0-bookworm-slim'
 
 FROM ${BUILDER_IMAGE}
 
 # Init /develop for user USER_UID
 ARG USER_UID=1001
 RUN useradd --system --uid "${USER_UID}" --gid 0 -m developer || :
-RUN mkdir -p /develop && \
-     chown "${USER_UID}:0" /develop
+RUN mkdir -p /develop && chown "${USER_UID}:0" /develop
 WORKDIR /develop
 USER "${USER_UID}"
 
@@ -37,10 +18,10 @@ COPY --chown="${USER_UID}:0" \
      /develop/
 
 ENV NODE_ENV development
-RUN npm install --loglevel warn --no-audit
+RUN npm install --loglevel warn
 RUN mkdir -p .vite
 
 ENV DEV_PORT 8080
 ENV DEV_BINDADDR 0.0.0.0
 EXPOSE 8080
-CMD npm install; rm -rf .vite/*; npm run start
+CMD npm install; rm -rf .vite/*; npm run generate; npm run start
