--- a/client/Dockerfile.build
+++ b/client/Dockerfile.build
@@ -1,23 +1,5 @@
 # Builder and tester container for production build
-
-# ******************************** NOTE ***************************************
-# Enable cypress and the browsers you want test against when you are ready
-# to do e2e testing. Otherwise keep the ARGs commented out so that the browsers
-# are not installed unnecessarily.
-
-# Also keep in mind that the browser versions need to be exact versions!
-# Check available versions here: https://github.com/cypress-io/cypress-docker-images/tree/master/factory#api
-# ARG CHROME_VERSION='114.0.5735.198-1'
-# ARG EDGE_VERSION='100.0.1185.29-1'
-# ARG FIREFOX_VERSION='107.0'
-# *****************************************************************************
-
-# Node v22.19.0 has npm v10.9.3 (should match the version in package.json `engines` field!)
-ARG NODE_VERSION='22.19.0'
-# BASE_IMAGE arg is used by the 'cypress/factory' image
-ARG BASE_IMAGE='node:22.19.0'
-# Change BUILDER_IMAGE from 'node:x' to 'cypress/factory' when you are ready to do e2e testing
-ARG BUILDER_IMAGE='node:22.19.0'
+ARG BUILDER_IMAGE='node:22.12.0-bookworm-slim'
 ARG RUNTIME_IMAGE='nginx:stable-alpine'
 
 FROM ${BUILDER_IMAGE} as builder
@@ -43,8 +25,7 @@ ENV API_ROOT ''
 ENV API_URL /api
 ENV SENTRY_DSN #sentryDSN
 
-RUN npm run lint
-RUN npm run test:unit
+RUN npm run generate
 RUN npm run build
 
 # Production runtime
