--- a/server/Dockerfile.build
+++ b/server/Dockerfile.build
@@ -1,9 +1,11 @@
-ARG BUILDER_IMAGE='node:22.8.0-alpine'
-ARG RUNTIME_IMAGE='node:22.8.0-alpine'
+ARG BUILDER_IMAGE='node:22.12.0-bookworm-slim'
+ARG RUNTIME_IMAGE='node:22.12.0-bookworm-slim'
 
 # Builder and tester container for production build
-FROM ${BUILDER_IMAGE} as builder
-RUN apk add --update-cache build-base python3 git fontconfig
+FROM ${BUILDER_IMAGE} AS builder
+
+# Install deps
+RUN apt-get update -y && apt-get install -y build-essential python3 git fontconfig libxml2-utils
 
 RUN mkdir -p /develop
 WORKDIR /develop
@@ -19,9 +21,7 @@ RUN npm ci --loglevel warn --no-audit
 
 COPY ${SERVICE_DIR} /develop
 
-RUN npm run lint
-RUN npm run test:unit
-RUN npm run build:prod
+RUN npm run build
 
 # Production runtime container
 FROM ${RUNTIME_IMAGE}
@@ -30,6 +30,9 @@ LABEL version=${BUILD_VERSION} \
       company=companyname \
       project=full-stack-template \
       role=server
+
+# Install deps
+RUN apt-get update -y && apt-get install -y libxml2-utils
 
 RUN mkdir -p /service
 WORKDIR /service
@@ -40,8 +43,8 @@ COPY --from=builder /develop/package-lock.json .
 COPY --from=builder /develop/node_modules ./node_modules
 
 # Add migrations just in case these are occasionally run manually
-RUN mkdir -p /service/src/db/migrations
-COPY --from=builder /develop/src/db/migrations ./src/db/migrations
+RUN mkdir -p /service/db/migrations
+COPY --from=builder /develop/db/migrations ./db/migrations
 
 # Delete development libraries and create node user if it doesn't exist
 RUN npm prune --production && \
@@ -57,4 +60,4 @@ ENV BASE_PATH /api
 # Run as "node" user. Numeric user id required for pod security admission.
 USER 1000
 EXPOSE 8080
-CMD ["node", "--experimental-require-module", "./index.js"]
+CMD ["node", "./index.js"]
