--- a/worker/package.json
+++ b/worker/package.json
@@ -8,7 +8,7 @@
     "start:dev": "NODE_ENV=development ts-node-dev --respawn --inspect=0.0.0.0:9229 -- index.ts | bunyan -l debug",
     "lint": "tsc -p . --noEmit && eslint './src/**/*.ts' --ignore-path .eslintignore --quiet",
     "build:test": "tsc --build tsconfig.test.json",
-    "build:prod": "NODE_ENV=production tsc --build tsconfig.json",
+    "build": "NODE_ENV=production tsc --build tsconfig.json",
     "start:prod": "NODE_ENV=production npm run build:prod && node build/index.js"
   },
   "dependencies": {
