--- a/playwright/package.json
+++ b/playwright/package.json
@@ -2,10 +2,10 @@
   "name": "full-stack-template-playwright",
   "type": "module",
   "scripts": {
-    "install:clean": "rm -rf node_modules && npm ci",
+    "install:clean": "rm -rf node_modules && npm install",
     "pretty-quick": "pretty-quick",
-    "lint": "tsc --noEmit && eslint 'tests/**/*.ts'",
-    "lint-fix": "eslint 'tests/**/*.{ts,tsx}' --fix",
+    "lint": "eslint 'tests/**/*.ts'",
+    "lint:fix": "eslint 'tests/**/*.{ts,tsx}' --fix",
     "format:check": "prettier --check './tests/**/*.{ts,tsx}'",
     "format:write": "prettier --write './tests/**/*.{ts,tsx}'",
     "typecheck": "tsc --noEmit",
@@ -14,13 +14,20 @@
     "playwright:ui": "playwright test --ui"
   },
   "devDependencies": {
-    "@playwright/test": "1.41.2",
-    "@types/node": "20.11.19",
-    "eslint": "8.56.0",
-    "eslint-plugin-playwright": "1.3.0",
-    "typescript": "5.4.2",
-    "typescript-eslint": "7.2.0",
-    "prettier": "3.6.2"
+    "@eslint/js": "9.13.0",
+    "@playwright/test": "1.48.2",
+    "@types/eslint__js": "8.42.3",
+    "@types/node": "22.8.0",
+    "dotenv": "16.4.5",
+    "eslint": "9.13.0",
+    "eslint-plugin-playwright": "2.0.0",
+    "prettier": "3.3.3",
+    "typescript": "5.6.2",
+    "typescript-eslint": "8.11.0"
+  },
+  "engines": {
+    "node": ">=20",
+    "npm": ">=10"
   },
   "prettier": {
     "printWidth": 80,
