--- a/server/package.json
+++ b/server/package.json
@@ -72,6 +72,7 @@
     "eslint-plugin-promise": "7.1.0",
     "gql.tada": "1.8.6",
     "graphql-request": "6.1.0",
+    "npm-run-all": "4.1.5",
     "prettier": "3.3.3",
     "tsc-alias": "1.8.10",
     "tsx": "4.17.0",
