feat: add PUT to bucket cors

--- a/scripts/terraform-dev.yaml
+++ b/scripts/terraform-dev.yaml
@@ -7,5 +7,5 @@ settings:
         - allowedOrigins:
             - https://${taito_domain}
             - http://localhost:9999
-          allowedMethods: ["HEAD", "GET"]
+          allowedMethods: ["HEAD", "GET", "PUT"]
 # END
